--- a/planningReport_section004_group42.ipynb
+++ b/planningReport_section004_group42.ipynb
@@ -1,45 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f32e23cc",
+   "metadata": {},
+   "source": [
+    "Link to GitHub Repository: https://github.com/Xfinitious/DSCI_V-100-Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "802bcd87",
+   "metadata": {},
+   "source": [
+    "# The Data: <br>\n",
+    "### players.csv\n",
+    "\n",
+    "<p style=\"font-size: 16px;\">\n",
+    "    - experience: <br>\n",
+    "    - subscribe: <br>\n",
+    "    - hashedEmail: <br>\n",
+    "    - played_hours: <br>\n",
+    "    - name: <br>\n",
+    "    - gender: <br>\n",
+    "    - Age: \n",
+    "</p>\n",
+    "\n",
+    "### sessions.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7677164",
+   "metadata": {},
+   "source": [
+    "TEXT"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d3bffd2f",
+   "execution_count": null,
+   "id": "ca50e86f",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "1"
-      ],
-      "text/latex": [
-       "1"
-      ],
-      "text/markdown": [
-       "1"
-      ],
-      "text/plain": [
-       "[1] 1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a <- 1\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f32e23cc",
-   "metadata": {},
-   "source": [
-    "Text"
+    "#CODE"
    ]
   }
  ],
