Planning Report and More
-3 new folders (pic, vis, sub)
-ggsave in code.
-Plot pictures.
-Planning report and html ver.

--- a/code.ipynb
+++ b/code.ipynb
@@ -807,15 +807,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c9b2776",
+   "execution_count": 6,
+   "id": "1447372d",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#ggsave(\"pictures/visualizations/hrsPlayedOverview_plot.png\", players_plot)\n",
+    "#ggsave(\"pictures/visualizations/ttlHrsPlayed_plot.png\", players_plot_2)"
+   ]
   }
  ],
  "metadata": {
