--- a/submit/planningReport_section004_group42.ipynb
+++ b/submit/planningReport_section004_group42.ipynb
@@ -61,10 +61,10 @@
     "\t-Age of a specific player \\\n",
     "\t-min = 9.00 years old, avg = 21.14 years old, max = 58.00years old\n",
     "\n",
-    "**Issues:**\n",
-    "Player experience is too vague. It does not specify whether it is experience with Minecraft or with games in general. We also do not know how each player is classified, since it is difficult to categorize skill level, especially in Minecraft, a non-competitive game. What was measured to determine it? Additionally, what makes a player a “Pro?” What about an “Amateur?”\n",
-    "The sample size is too small. This issue is especially prevalent in the “gender” variable because there is only one entry for “Other” players and two entries for “Agender” players.\n",
-    "I will assume subscribed means the specific player is subscribed to the newsletter."
+    "**Issues:** <br>\n",
+    "-Player experience is too vague. It does not specify whether it is experience with Minecraft or with games in general. We also do not know how each player is classified, since it is difficult to categorize skill level, especially in Minecraft, a non-competitive game. What was measured to determine it? Additionally, what makes a player a “Pro?” What about an “Amateur?” \\\n",
+    "-The sample size is too small. This issue is especially prevalent in the “gender” variable because there is only one entry for “Other” players and two entries for “Agender” players. \\\n",
+    "-I will assume subscribed means the specific player is subscribed to the newsletter."
    ]
   },
   {
